"Updated HTML and CSS for responsiveness and added menu icon; adjusted font sizes and positions for various screen sizes"

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<h2>Women / Men</h2>
 				<h2>Agency / Blog / Information</h2>
 				<h2><i class="ri-search-line"></i></h2>
+				<i class="ri-menu-3-line"></i>
 			</nav>
 
 			<div id="center">
@@ -327,8 +328,11 @@
 				</div>
 			</div>
 
-			<div id="scroll">
+			<div id="scroll2">
 				<hr />
+				<div id="scroll-container">
+					<h1 class="scroll-text">PREMIER MODEL 2020</h1>
+				</div>
 				<div id="scroll-container">
 					<h1 class="scroll-text">PREMIER MODEL 2020</h1>
 				</div>
@@ -352,8 +356,8 @@
 				<div class="page6-card">
 					<h4>
 						<span>B</span>
-						As London Fashion Week has come to an end, we've made a list of our fresh new faces & showgirls
-						who have hard walked for some of the biggest designers.
+						As London Fashion Week has come to an end, we've made a list of our fresh new faces who have
+						hard walked for some of the biggest designers.
 					</h4>
 					<img
 						src="https://images.pexels.com/photos/5066814/pexels-photo-5066814.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
